v0.11/14/dependencies.tf
# ECS
resource "aws_cloudwatch_log_group" "for_ecs" {
  name              = "/ecs/example"
  retention_in_days = 180
}

resource "aws_ecs_cluster" "example" {
  name = "example-14"
}

resource "aws_ecs_task_definition" "example" {
  family                   = "example"
  cpu                      = "256"
  memory                   = "512"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  container_definitions    = "${file("./container_definitions.json")}"
  execution_role_arn       = "${module.ecs_task_execution_role.iam_role_arn}"
}

resource "aws_ecs_service" "example" {
  name                              = "example"
  task_definition                   = "${aws_ecs_task_definition.example.arn}"
  cluster                           = "${aws_ecs_cluster.example.arn}"
  desired_count                     = 2
  launch_type                       = "FARGATE"
  platform_version                  = "1.3.0"
  health_check_grace_period_seconds = 60

  network_configuration {
    assign_public_ip = false
    security_groups  = ["${module.nginx_sg.security_group_id}"]

    subnets = [
      "${aws_subnet.private_0.id}",
      "${aws_subnet.private_1.id}",
    ]
  }

  load_balancer {
    target_group_arn = "${aws_lb_target_group.example.arn}"
    container_name   = "example"
    container_port   = 80
  }

  lifecycle {
    ignore_changes = ["task_definition"]
  }
}

module "nginx_sg" {
  source      = "./security_group"
  name        = "nginx-sg"
  vpc_id      = "${aws_vpc.example.id}"
  port        = 80
  cidr_blocks = ["${aws_vpc.example.cidr_block}"]
}

module "ecs_task_execution_role" {
  source     = "./iam_role"
  name       = "ecs-task-execution"
  identifier = "ecs-tasks.amazonaws.com"
  policy     = "${data.aws_iam_policy.ecs_task_execution_role_policy.policy}"
}

data "aws_iam_policy" "ecs_task_execution_role_policy" {
  arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# ALB
resource "aws_lb" "example" {
  name                       = "example"
  load_balancer_type         = "application"
  internal                   = false
  idle_timeout               = 60
  enable_deletion_protection = false
  security_groups            = ["${module.http_sg.security_group_id}"]

  subnets = [
    "${aws_subnet.public_0.id}",
    "${aws_subnet.public_1.id}",
  ]
}

module "http_sg" {
  source      = "./security_group"
  name        = "http-sg"
  vpc_id      = "${aws_vpc.example.id}"
  port        = 80
  cidr_blocks = ["0.0.0.0/0"]
}

output "alb_dns_name" {
  value = "${aws_lb.example.dns_name}"
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = "${aws_lb.example.arn}"
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "これは『HTTP』です"
      status_code  = "200"
    }
  }
}

resource "aws_lb_target_group" "example" {
  name                 = "example"
  vpc_id               = "${aws_vpc.example.id}"
  port                 = 80
  protocol             = "HTTP"
  target_type          = "ip"
  deregistration_delay = 300

  health_check {
    path                = "/"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = 200
    port                = "traffic-port"
    protocol            = "HTTP"
  }

  depends_on = ["aws_lb.example"]
}

resource "aws_lb_listener_rule" "example" {
  listener_arn = "${aws_lb_listener.http.arn}"
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = "${aws_lb_target_group.example.arn}"
  }

  condition {
    field  = "path-pattern"
    values = ["/*"]
  }
}

# ネットワーク
resource "aws_vpc" "example" {
  cidr_block = "10.0.0.0/16"

  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "example"
  }
}

resource "aws_subnet" "public_0" {
  vpc_id                  = "${aws_vpc.example.id}"
  cidr_block              = "10.0.0.0/24"
  availability_zone       = "ap-northeast-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "public_1" {
  vpc_id                  = "${aws_vpc.example.id}"
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-northeast-1c"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "example" {
  vpc_id = "${aws_vpc.example.id}"
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.example.id}"
}

resource "aws_route" "public" {
  route_table_id         = "${aws_route_table.public.id}"
  gateway_id             = "${aws_internet_gateway.example.id}"
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "public_0" {
  subnet_id      = "${aws_subnet.public_0.id}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = "${aws_subnet.public_1.id}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_subnet" "private_0" {
  vpc_id                  = "${aws_vpc.example.id}"
  cidr_block              = "10.0.64.0/24"
  availability_zone       = "ap-northeast-1a"
  map_public_ip_on_launch = false
}

resource "aws_subnet" "private_1" {
  vpc_id                  = "${aws_vpc.example.id}"
  cidr_block              = "10.0.65.0/24"
  availability_zone       = "ap-northeast-1c"
  map_public_ip_on_launch = false
}

resource "aws_eip" "nat_gateway_0" {
  vpc        = true
  depends_on = ["aws_internet_gateway.example"]
}

resource "aws_eip" "nat_gateway_1" {
  vpc        = true
  depends_on = ["aws_internet_gateway.example"]
}

resource "aws_nat_gateway" "nat_gateway_0" {
  allocation_id = "${aws_eip.nat_gateway_0.id}"
  subnet_id     = "${aws_subnet.public_0.id}"
  depends_on    = ["aws_internet_gateway.example"]
}

resource "aws_nat_gateway" "nat_gateway_1" {
  allocation_id = "${aws_eip.nat_gateway_1.id}"
  subnet_id     = "${aws_subnet.public_1.id}"
  depends_on    = ["aws_internet_gateway.example"]
}

resource "aws_route_table" "private_0" {
  vpc_id = "${aws_vpc.example.id}"
}

resource "aws_route_table" "private_1" {
  vpc_id = "${aws_vpc.example.id}"
}

resource "aws_route" "private_0" {
  route_table_id         = "${aws_route_table.private_0.id}"
  nat_gateway_id         = "${aws_nat_gateway.nat_gateway_0.id}"
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route" "private_1" {
  route_table_id         = "${aws_route_table.private_1.id}"
  nat_gateway_id         = "${aws_nat_gateway.nat_gateway_1.id}"
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "private_0" {
  subnet_id      = "${aws_subnet.private_0.id}"
  route_table_id = "${aws_route_table.private_0.id}"
}

resource "aws_route_table_association" "private_1" {
  subnet_id      = "${aws_subnet.private_1.id}"
  route_table_id = "${aws_route_table.private_1.id}"
}

# AWS プロバイダの設定
provider "aws" {
  version = "= 2.0.0"
  region  = "ap-northeast-1"
}
